[project]
name = "lab5-xxxxx-name-code"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "br-mbp", email = "brend.main@gmail.com" }
]
dependencies = [
    "opencv-python>=4.11.0.86",
    "torch>=2.7.0",
    "wandb>=0.19.10",
    "numpy>=2.2.5",
    "ale-py>=0.11.0",
    "gymnasium>=1.1.1",
    "imageio>=2.37.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lab5_xxxxx_name_code"]
